fixed covering the button to hide the password with text from the input

--- a/src/components/UI/AuthInput/AuthInput.module.scss
+++ b/src/components/UI/AuthInput/AuthInput.module.scss
@@ -1,3 +1,3 @@
 .auth-input {
-  @apply w-full py-3 px-4 transition-all duration-300 bg-auth-input-color rounded-lg text-white focus:shadow-auth-input;
+  @apply w-full py-3 px-4 transition-all duration-300 bg-auth-input-color rounded-lg text-white focus:shadow-auth-input pr-10;
 }
